--- a/package.json
+++ b/package.json
@@ -24,6 +24,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "devDependencies": {
+    "buffer": "npm:buffer@6.0.3",
+    "crypto": "npm:crypto-browserify@3.12.0",
+    "stream": "npm:stream-browserify@^3.0.0",
+    "util": "^0.12.5"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
