--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
     "sass": "^1.56.2",
     "styled-components": "^5.3.6",
-    "sweetalert2": "^11.7.3",
-    "sweetalert2-react-content": "^5.0.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
