--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
+    "react-share": "^4.4.1",
     "react-uuid": "^2.0.0",
     "sass": "^1.56.2",
     "styled-components": "^5.3.6",
