feat: add workflows

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "e-commerce",
-  "version": "0.1.0",
+  "name": "bianxi-front",
+  "version": "0.1.0-SNAPSHOT",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
