--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "start": "react-scripts start",
     "build": "CI=false && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:int": "env-cmd -f .env.integration npm run build && npm run zip-int",
+    "build:prod": "npm run build && npm run zip-prod",
+    "zip-int": "cd dist; zip -r ../bianxi-front_${npm_package_version}_int.zip * .htaccess",
+    "zip-prod": "cd dist; zip -r ../bianxi-front_$npm_package_version.zip * .htaccess"
   },
   "devDependencies": {
     "buffer": "npm:buffer@6.0.3",
