--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "bianxi-front",
   "version": "0.1.5-SNAPSHOT.0",
   "private": true,
+  "homepage": "/",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext js,jsx",
+    "build:prod": "npm run build && npm run zip-prod",
+    "zip-prod": "cd dist; zip -r ../bianxi-front_$npm_package_version.zip * .htaccess"
+  },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
@@ -33,17 +43,18 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build:prod": "npm run build && npm run zip-prod",
-    "zip-prod": "cd dist; zip -r ../bianxi-front_$npm_package_version.zip * .htaccess"
-  },
   "devDependencies": {
     "buffer": "npm:buffer@6.0.3",
     "crypto": "npm:crypto-browserify@3.12.0",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^27.5.1",
+    "jest-environment-jsdom": "^29.6.4",
+    "jest-mock-extended": "^3.0.5",
+    "lint-staged": "^14.0.1",
     "stream": "npm:stream-browserify@^3.0.0",
     "util": "^0.12.5"
   },
