--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "dotenv": "^16.3.1",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,7 +42,8 @@
     "sass": "^1.56.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "win-node-env": "^0.6.1"
   },
   "devDependencies": {
     "buffer": "npm:buffer@6.0.3",
