--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "sass": "^1.56.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "win-node-env": "^0.6.1"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "buffer": "npm:buffer@6.0.3",
