--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18.17.0
+        env:
+          REACT_APP_GOOGLE_OAUTH_KEY: ${{ secrets. REACT_APP_GOOGLE_OAUTH_KEY }}
+          REACT_APP_STRIPE_KEY: ${{ secrets.REACT_APP_STRIPE_KEY }}
+          REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
 
       - name: Install dependencies
         run: npm i
