--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Create env
         run: |
           touch .env
-          echo REACT_APP_GOOGLE_OAUTH_KEY: ${{ secrets. REACT_APP_GOOGLE_OAUTH_KEY }} >> .env
-          echo REACT_APP_STRIPE_KEY: ${{ secrets.REACT_APP_STRIPE_KEY }} >> .env
-          echo REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }} >> .env
+          echo REACT_APP_GOOGLE_OAUTH_KEY=${{ secrets. REACT_APP_GOOGLE_OAUTH_KEY }} >> .env
+          echo REACT_APP_STRIPE_KEY=${{ secrets.REACT_APP_STRIPE_KEY }} >> .env
+          echo REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }} >> .env
           cat .env
 
 
