--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "homepage": "/",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8000 react-scripts start",
+    "start-pc": "set PORT=8000&& react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -35,7 +36,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
     "react-uuid": "^2.0.0",
     "sass": "^1.56.2",
@@ -56,7 +57,8 @@
     "jest-mock-extended": "^3.0.5",
     "lint-staged": "^14.0.1",
     "stream": "npm:stream-browserify@^3.0.0",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "webpack": "^5.89.0"
   },
   "eslintConfig": {
     "extends": [
