--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "zip-prod": "cd dist; zip -r ../bianxi-front_$npm_package_version.zip * .htaccess"
   },
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
@@ -36,7 +37,6 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "^5.0.1",
     "react-share": "^4.4.1",
     "react-uuid": "^2.0.0",
     "sass": "^1.56.2",
@@ -58,7 +58,8 @@
     "lint-staged": "^14.0.1",
     "stream": "npm:stream-browserify@^3.0.0",
     "util": "^0.12.5",
-    "webpack": "^5.89.0"
+    "webpack": "^5.89.0",
+    "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
     "extends": [
